Finished the research spike

--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -98,9 +98,10 @@ add_dependencies(spdlog::spdlog DEPENDS spdlog)
 #
 # monaco-editor
 #
-file(GLOB_RECURSE INSTALLED ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/package/package.json)
+file(GLOB_RECURSE INSTALLED ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/package.json)
 if(NOT INSTALLED)
 set(MONACO_TAG 0.20.0)
+
 set (monaco-editor-source "https://registry.npmjs.org/monaco-editor/-/monaco-editor-${MONACO_TAG}.tgz")
 set (monaco-editor-sum 5d5009343a550124426cb4d965a4d27a348b4dea)
 set (monaco-editor-archive "${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz")
@@ -109,9 +110,20 @@ set (monaco-editor-archive "${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar
 file(DOWNLOAD "${monaco-editor-source}" "${monaco-editor-archive}"
     EXPECTED_HASH SHA1=${monaco-editor-sum}
 )
-execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz
-WORKING_DIRECTORY ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}
-)
+
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz WORKING_DIRECTORY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG})
+    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/min/vs ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/min/vs)
+    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/min-maps/vs ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/min-maps/vs)
+    file(COPY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/monaco.d.ts DESTINATION ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG})
+    file(COPY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/editor.html DESTINATION ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG})
+
+ExternalProject_Add(monaco-editor-${MONACO_TAG}
+    SOURCE_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}
+    INSTALL_DIR ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}
+    DOWNLOAD_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/
+    EXCLUDE_FROM_ALL ON
+    )
+
 endif() 
 
 #
