added the monaco-editor-0.20.0 to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ hs-utils-release
 extern/qwt/*
 extern/qwt-*.zip
 extern/couchbase-lite-C
+extern/monaco-editor-0.20.0/package/*
+extern/monaco-editor-0.20.0/tar/*
 *.rcc
 .venv*/
 3p/
