use static library setup since it works with current built setup

--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -780,6 +780,7 @@ if(NOT LIB_INSTALLED)
             EXCLUDE_FROM_ALL ON
             CMAKE_ARGS "${CMAKE_ARGS}"
             -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
+            -DCMAKE_MACOSX_RPATH=1
 
             INSTALL_COMMAND ${CMAKE_COMMAND} --build . --target install
         )
@@ -798,7 +799,15 @@ else()
     endif()
 endif()
 
-add_library(zeromq::libzmq SHARED IMPORTED GLOBAL)
+if(WIN32)
+    add_library(zeromq::libzmq SHARED IMPORTED GLOBAL)
+elseif(APPLE)
+    # TODO: libzmq is shared between DevStudio and Strata. Therefore, this should be dynamic.
+    # - During devolopment runtime the dynamic lib should be moved along with bin directory
+    # - Proper handling for RPATH with offline & onlioe MacOS installer.
+    # https://jira.onsemi.com/browse/CS-1460
+    add_library(zeromq::libzmq STATIC IMPORTED GLOBAL)
+endif()
 
 if(WIN32)
     set_target_properties(zeromq::libzmq PROPERTIES
@@ -811,10 +820,9 @@ if(WIN32)
 else()
     set_target_properties(zeromq::libzmq PROPERTIES
             INTERFACE_INCLUDE_DIRECTORIES "${EXTERN_INSTALL_DIR_PATH}/libzmq-${GIT_HASH}/include"
-            IMPORTED_LOCATION "${EXTERN_INSTALL_DIR_PATH}/libzmq-${GIT_HASH}/lib/${CMAKE_SHARED_LIBRARY_PREFIX}zmq${CMAKE_SHARED_LIBRARY_SUFFIX}"
+            IMPORTED_LOCATION "${EXTERN_INSTALL_DIR_PATH}/libzmq-${GIT_HASH}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}zmq${CMAKE_STATIC_LIBRARY_SUFFIX}"
     )
 endif()
-
 add_dependencies(zeromq::libzmq DEPENDS libzmq)
 # TODO: cppzmq (c++ headers only zmq wrapper) & zhelper.hpp are still referenced from our source code
 # https://jira.onsemi.com/browse/CS-1416
