clean up directory structure

--- a/host/libs/StrataRPC/test/CMakeLists.txt
+++ b/host/libs/StrataRPC/test/CMakeLists.txt
@@ -24,6 +24,10 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE StrataRPC
 )
 
+target_include_directories(${PROJECT_NAME}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src
+)
+
 add_test(NAME ${PROJECT_NAME}
     COMMAND ${PROJECT_NAME}
 )
