WIP: generate two StrataRPC libraries

--- a/host/libs/StrataRPC/test/CMakeLists.txt
+++ b/host/libs/StrataRPC/test/CMakeLists.txt
@@ -21,7 +21,8 @@ add_executable(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE Qt5::Test
-    PRIVATE StrataRPC
+    PRIVATE StrataRPC-StrataServer
+    PRIVATE StrataRPC-StrataClient
 )
 
 target_include_directories(${PROJECT_NAME}
