--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -103,28 +103,25 @@ add_dependencies(spdlog::spdlog DEPENDS spdlog)
 #
 set(MONACO_TAG 0.20.0)
 
-set (monaco-editor-source "https://registry.npmjs.org/monaco-editor/-/monaco-editor-${MONACO_TAG}.tgz")
-set (monaco-editor-sum 5d5009343a550124426cb4d965a4d27a348b4dea)
-set (monaco-editor-archive "${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz")
-file(GLOB_RECURSE DOWNLOADED ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz)
-if(NOT DOWNLOADED)
-file(DOWNLOAD "${monaco-editor-source}" "${monaco-editor-archive}"
-    EXPECTED_HASH SHA1=${monaco-editor-sum}
-)
-endif() 
+file(GLOB_RECURSE INSTALLED ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/editor.html)
+if(NOT INSTALLED)
 
+    file(DOWNLOAD https://registry.npmjs.org/monaco-editor/-/monaco-editor-0.20.0.tgz ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz EXPECTED_HASH SHA1=5d5009343a550124426cb4d965a4d27a348b4dea)
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz WORKING_DIRECTORY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG})
     execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/min/vs ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/min/vs)
     execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/min-maps/vs ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/min-maps/vs)
     file(COPY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/package/monaco.d.ts DESTINATION ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG})
     file(COPY ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/editor.html DESTINATION ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG})
 
-ExternalProject_Add(monaco-editor-${MONACO_TAG}
-    SOURCE_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}
-    INSTALL_DIR ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}
-    DOWNLOAD_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/
-    EXCLUDE_FROM_ALL ON
-)
+    ExternalProject_Add(monaco-editor-${MONACO_TAG}
+        SOURCE_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}
+        INSTALL_DIR ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}
+        DOWNLOAD_DIR ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/
+        CONFIGURE_COMMAND ""
+        BUILD_COMMAND ""
+        INSTALL_COMMAND ""
+    )
+endif() 
 
 #
 # pdf.js
