cmake: more descriptive external zmq project name

--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -55,4 +55,4 @@ include(ProjectExternals_couchbase)
 include(ProjectExternals_qwt)
 include(ProjectExternals_QtMqtt)
 include(ProjectExternals_cbl-official-api)
-include(ProjectExternals_zmq)
+include(ProjectExternals_libzmq)
