--- a/host/assets/config/sds/sds_prod.config
+++ b/host/assets/config/sds/sds_prod.config
@@ -1,5 +1,15 @@
 {
      "host_controller_service": {
        "dealer_address": "tcp://127.0.0.1:5563"
+    },
+
+     "url_cloud_service": {
+       "production_auth_server": "https://strata.onsemi.com/", 
+       "sales_popup_url": "https://www.onsemi.com/PowerSolutions/locateSalesSupport.do",
+       "license_url": "https://www.openssl.org/source/license.html",
+       "privacy_policy_url": "https://www.onsemi.com/privacy-policy",
+       "mouser_url": "https://www.mouser.com/new/on-semiconductor/onsemi-strata-developer-studio/",
+       "digikey_url": "https://www.digikey.com/en/product-highlight/o/on-semi/strata-developer-studio",
+       "avnet_url": "https://www.avnet.com/wps/portal/us/products/c/transform-your-thinking-with-on-semiconductor/strata-studio/"
     }
 }
