some recommendations from pull request applied

--- a/host/assets/config/sds/sds_prod.config
+++ b/host/assets/config/sds/sds_prod.config
@@ -4,7 +4,7 @@
     },
 
      "url_cloud_service": {
-       "production_auth_server": "https://strata.onsemi.com/", 
+       "auth_server": "https://strata.onsemi.com/", 
        "sales_popup_url": "https://www.onsemi.com/PowerSolutions/locateSalesSupport.do",
        "license_url": "https://www.openssl.org/source/license.html",
        "privacy_policy_url": "https://www.onsemi.com/privacy-policy",
