use the official cppzmq library (v4.7.1) instead of the one hardcoded in code

--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -56,3 +56,4 @@ include(ProjectExternals_qwt)
 include(ProjectExternals_QtMqtt)
 include(ProjectExternals_cbl-official-api)
 include(ProjectExternals_libzmq)
+include(ProjectExternals_cppzmq)
