--- a/host/apps/PlatformRegistrationTool/CMakeLists.txt
+++ b/host/apps/PlatformRegistrationTool/CMakeLists.txt
@@ -133,7 +133,7 @@ add_custom_command(
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
     $<$<CONFIG:Debug>:QT_QML_DEBUG>
 )
 
