--- a/host/apps/CouchbaseBrowser/CMakeLists.txt
+++ b/host/apps/CouchbaseBrowser/CMakeLists.txt
@@ -71,7 +71,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 if(BUILD_TESTING)
