--- a/host/libs/Board/CMakeLists.txt
+++ b/host/libs/Board/CMakeLists.txt
@@ -38,7 +38,7 @@ target_link_libraries(${DEVICE}
 
 target_compile_definitions(${DEVICE} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${DEVICE} PROPERTIES
@@ -93,7 +93,7 @@ target_link_libraries(${DEVICE_OPERATIONS}
 
 target_compile_definitions(${DEVICE_OPERATIONS} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${DEVICE_OPERATIONS} PROPERTIES
@@ -126,7 +126,7 @@ target_link_libraries(${BOARD_MANAGER}
 
 target_compile_definitions(${BOARD_MANAGER} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${BOARD_MANAGER} PROPERTIES
