--- a/host/libs/DownloadManager/CMakeLists.txt
+++ b/host/libs/DownloadManager/CMakeLists.txt
@@ -32,7 +32,7 @@ target_link_libraries(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
