--- a/host/libs/flasher/CMakeLists.txt
+++ b/host/libs/flasher/CMakeLists.txt
@@ -33,7 +33,7 @@ target_link_libraries(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -60,7 +60,7 @@ target_link_libraries(${PROJECT_NAME}${CONNECTOR_SUFFIX}
 
 target_compile_definitions(${PROJECT_NAME}${CONNECTOR_SUFFIX} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
 
 set_target_properties(${PROJECT_NAME}${CONNECTOR_SUFFIX} PROPERTIES
