--- a/host/libs/loggers/QtLogger/src/CMakeLists.txt
+++ b/host/libs/loggers/QtLogger/src/CMakeLists.txt
@@ -25,5 +25,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
-    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+    QT_DISABLE_DEPRECATED_BEFORE=${VERSION_QT5_DEPRECATE_BEFORE}
 )
