credentials added to configuration json files

--- a/host/apps/hcs3/CMakeLists.txt
+++ b/host/apps/hcs3/CMakeLists.txt
@@ -69,7 +69,30 @@ endif()
 
 generate_app_version(GITTAG_PREFIX "hcs_" MACBUNDLE OFF)
 generate_app_build_timestamp()
-generate_app_build_replicator_credentials(USERNAME "***REMOVED***" PASSWORD "***REMOVED***")
+
+set(HCS_CREDENTIALS_LOCATION ${CMAKE_SOURCE_DIR}/assets/config/hcs/credentials)
+
+if(NOT HCS_CREDENTIALS_CONFIG)
+    set(HCS_CREDENTIALS_CONFIG qa.json CACHE STRING "Desired HCS configuration file with credentials." FORCE)
+    message(STATUS "Defaulting 'HCS_CREDENTIALS_CONFIG' to ${HCS_CREDENTIALS_CONFIG}.")
+endif()
+file(GLOB HCS_CREDENTIALS_LOCATION_CHOICES
+    RELATIVE ${HCS_CREDENTIALS_LOCATION}
+    ${HCS_CREDENTIALS_LOCATION}/*.json
+)
+set_property(CACHE HCS_CREDENTIALS_CONFIG PROPERTY STRINGS ${HCS_CREDENTIALS_LOCATION_CHOICES})
+file(READ ${CMAKE_SOURCE_DIR}/assets/config/hcs/credentials/${HCS_CREDENTIALS_CONFIG} JSON_CREDENTIALS)
+
+string(FIND ${JSON_CREDENTIALS} "\"username\": \"" USERNAME_FIND_BEGIN)
+string(FIND ${JSON_CREDENTIALS} "\"," USERNAME_FIND_END)
+string(SUBSTRING ${JSON_CREDENTIALS} ${USERNAME_FIND_BEGIN} ${USERNAME_FIND_END} USERNAME_LINE)
+string(REGEX REPLACE "\"username\":|\",|\"|\ |\r|\n|{|}" "" CREDENTIALS_USERNAME ${USERNAME_LINE})
+string(FIND ${JSON_CREDENTIALS} "\"password\": " PASSWORD_FIND_BEGIN)
+string(FIND ${JSON_CREDENTIALS} "\"" PASSWORD_FIND_END REVERSE)
+string(SUBSTRING ${JSON_CREDENTIALS} ${PASSWORD_FIND_BEGIN} ${PASSWORD_FIND_END}-${PASSWORD_FIND_BEGIN} PASSWORD_LINE)
+string(REGEX REPLACE "\"password\":|\"|\ |\r|\n|\t|{|}" "" CREDENTIALS_PASSWORD ${PASSWORD_LINE})
+
+generate_app_build_replicator_credentials(USERNAME ${CREDENTIALS_USERNAME} PASSWORD ${CREDENTIALS_PASSWORD})
 
 set_target_properties(${PROJECT_NAME}Lib PROPERTIES
     AUTOMOC ON
