--- a/host/apps/DeveloperStudio/CMakeLists.txt
+++ b/host/apps/DeveloperStudio/CMakeLists.txt
@@ -154,3 +154,5 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
         target_compile_definitions(${PROJECT_NAME} PRIVATE -DQT_RCC_EXECUTABLE="${QT_RCC_EXECUTABLE}")
     endif()
 endif()
+
+add_definitions(-DEXTERN_INSTALL_DIR_PATH="${EXTERN_INSTALL_DIR_PATH}")
