--- a/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
+++ b/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
@@ -33,10 +33,11 @@
             return
           }
 
-          if (doc.channels_available) {
-            channel(doc.channels_available)
+          if (typeof doc.channels_available === "undefined" || doc.channels_available === null) {
             return
           }
+
+          channel(doc.channels_available)
         }
       `
     }
