CommandResponseMock/DeviceOperationsTest/V2: added mocks & tests for version1, version2 (embedded&assisted)

--- a/host/libs/Board/BoardManager/test/CMakeLists.txt
+++ b/host/libs/Board/BoardManager/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}-test
     BoardManagerTest.cpp
     DeviceMock.cpp
     DeviceOperationsTest.cpp
+    DeviceOperationsV2Test.cpp
     CommandResponseMock.cpp
     main.cpp
 )
