--- a/host/apps/hcs3/CMakeLists.txt
+++ b/host/apps/hcs3/CMakeLists.txt
@@ -72,27 +72,17 @@ generate_app_build_timestamp()
 
 set(HCS_CREDENTIALS_LOCATION ${CMAKE_SOURCE_DIR}/assets/config/hcs/credentials)
 
-if(NOT HCS_CREDENTIALS_CONFIG)
-    set(HCS_CREDENTIALS_CONFIG qa.json CACHE STRING "Desired HCS configuration file with credentials." FORCE)
-    message(STATUS "Defaulting 'HCS_CREDENTIALS_CONFIG' to ${HCS_CREDENTIALS_CONFIG}.")
+if(NOT APPS_CORESW_HCS_CREDENTIALS)
+    set(APPS_CORESW_HCS_CREDENTIALS qa.json CACHE STRING "Desired HCS configuration file with credentials." FORCE)
+    message(STATUS "Defaulting 'APPS_CORESW_HCS_CREDENTIALS' to ${APPS_CORESW_HCS_CREDENTIALS}.")
 endif()
 file(GLOB HCS_CREDENTIALS_LOCATION_CHOICES
     RELATIVE ${HCS_CREDENTIALS_LOCATION}
     ${HCS_CREDENTIALS_LOCATION}/*.json
 )
-set_property(CACHE HCS_CREDENTIALS_CONFIG PROPERTY STRINGS ${HCS_CREDENTIALS_LOCATION_CHOICES})
-file(READ ${CMAKE_SOURCE_DIR}/assets/config/hcs/credentials/${HCS_CREDENTIALS_CONFIG} JSON_CREDENTIALS)
-
-string(FIND ${JSON_CREDENTIALS} "\"username\": \"" USERNAME_FIND_BEGIN)
-string(FIND ${JSON_CREDENTIALS} "\"," USERNAME_FIND_END)
-string(SUBSTRING ${JSON_CREDENTIALS} ${USERNAME_FIND_BEGIN} ${USERNAME_FIND_END} USERNAME_LINE)
-string(REGEX REPLACE "\"username\":|\",|\"|\ |\r|\n|{|}" "" CREDENTIALS_USERNAME ${USERNAME_LINE})
-string(FIND ${JSON_CREDENTIALS} "\"password\": " PASSWORD_FIND_BEGIN)
-string(FIND ${JSON_CREDENTIALS} "\"" PASSWORD_FIND_END REVERSE)
-string(SUBSTRING ${JSON_CREDENTIALS} ${PASSWORD_FIND_BEGIN} ${PASSWORD_FIND_END}-${PASSWORD_FIND_BEGIN} PASSWORD_LINE)
-string(REGEX REPLACE "\"password\":|\"|\ |\r|\n|\t|{|}" "" CREDENTIALS_PASSWORD ${PASSWORD_LINE})
-
-generate_app_build_replicator_credentials(USERNAME ${CREDENTIALS_USERNAME} PASSWORD ${CREDENTIALS_PASSWORD})
+set_property(CACHE APPS_CORESW_HCS_CREDENTIALS PROPERTY STRINGS ${HCS_CREDENTIALS_LOCATION_CHOICES})
+file(READ ${CMAKE_SOURCE_DIR}/assets/config/hcs/credentials/${APPS_CORESW_HCS_CREDENTIALS} JSON_CREDENTIALS)
+generate_replicator_credentials(JSON_FILE ${JSON_CREDENTIALS})
 
 set_target_properties(${PROJECT_NAME}Lib PROPERTIES
     AUTOMOC ON
