moved the monaco editor min folders to a qt rcc file, that will be ignored from git

--- a/host/components/CMakeLists.txt
+++ b/host/components/CMakeLists.txt
@@ -21,6 +21,7 @@ if(APPS_CORECOMPONENTS)
     add_subdirectory(theme)
     add_subdirectory(fonts)
     add_subdirectory(pdfjs)
+    add_subdirectory(monaco)
 
     add_subdirectory(sgwidgets)
     add_subdirectory(common)
