--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -49,6 +49,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "OTA")
 endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+set(CMAKE_BUILD_RPATH "${CMAKE_BINARY_DIR}/bin")
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 option(BUILD_TESTING "Build the testing tree" ON)
