--- a/host/components/CMakeLists.txt
+++ b/host/components/CMakeLists.txt
@@ -21,8 +21,9 @@ if(APPS_CORECOMPONENTS)
     add_subdirectory(theme)
     add_subdirectory(fonts)
     add_subdirectory(pdfjs)
-    add_subdirectory(monaco)
-
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_subdirectory(monaco)
+    endif()
     add_subdirectory(sgwidgets)
     add_subdirectory(common)
     add_subdirectory(commoncpp)
