--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -56,5 +56,7 @@ include(ProjectExternals_qwt)
 include(ProjectExternals_QtMqtt)
 include(ProjectExternals_cbl-official-api)
 include(ProjectExternals_libzmq)
-include(ProjectExternals_monaco_editor)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    include(ProjectExternals_monaco_editor)
+endif()
 include(ProjectExternals_cppzmq)
