--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -53,6 +53,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(CMAKE_BUILD_RPATH "${CMAKE_BINARY_DIR}/bin")
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
+set(CMAKE_VIEWS_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/views")
+file(MAKE_DIRECTORY "${CMAKE_VIEWS_OUTPUT_DIRECTORY}")
+
 option(BUILD_TESTING "Build the testing tree" ON)
 add_feature_info(BUILD_TESTING BUILD_TESTING "Build the tsting tree.")
 enable_testing()
