sds: use the same resource path approach for all build types
No need to differentiate with present resource loader.

--- a/host/apps/DeveloperStudio/CMakeLists.txt
+++ b/host/apps/DeveloperStudio/CMakeLists.txt
@@ -36,7 +36,7 @@ add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE
     source/SGQrcTreeNode.cpp
     source/SGFileTabModel.cpp
     source/SGNewControlView.cpp
-    $<IF:$<OR:$<CONFIG:Release>,$<CONFIG:OTA>>, source/release/ResourcePath.cpp, source/debug/ResourcePath.cpp>
+    source/ResourcePath.cpp
     source/RunGuard.cpp
 
     source/config/Url.cpp
