SDS: auth server and static websites in config file separated

--- a/host/assets/config/sds/sds_prod.config
+++ b/host/assets/config/sds/sds_prod.config
@@ -3,8 +3,11 @@
        "dealer_address": "tcp://127.0.0.1:5563"
     },
 
-     "url_cloud_service": {
-       "auth_server": "https://strata.onsemi.com/", 
+     "cloud_service": {
+       "auth_server": "https://strata.onsemi.com/"
+    },
+
+    "static_website" : {
        "sales_popup_url": "https://www.onsemi.com/PowerSolutions/locateSalesSupport.do",
        "license_url": "https://www.openssl.org/source/license.html",
        "privacy_policy_url": "https://www.onsemi.com/privacy-policy",
