--- a/host/assets/config/sds/sds_prod.config
+++ b/host/assets/config/sds/sds_prod.config
@@ -4,7 +4,8 @@
     },
 
      "cloud_service": {
-       "auth_server": "https://strata.onsemi.com/"
+       "auth_server": "https://strata.onsemi.com/",
+       "nonprod_auth_server": "http://10.238.54.227/"
     },
 
     "static_website" : {
