SDS: change of testAuthServer name variable

--- a/host/assets/config/sds/sds_prod.config
+++ b/host/assets/config/sds/sds_prod.config
@@ -5,7 +5,7 @@
 
      "cloud_service": {
        "auth_server": "https://strata.onsemi.com/",
-       "nonprod_auth_server": "http://10.238.54.227/"
+       "test_auth_server": "http://10.238.54.227/"
     },
 
     "static_website" : {
