SDS: CMake macro to handle rcc plugins aka features

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -55,6 +55,8 @@ file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 set(CMAKE_VIEWS_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/views")
 file(MAKE_DIRECTORY "${CMAKE_VIEWS_OUTPUT_DIRECTORY}")
+set(CMAKE_PLUGINS_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins")
+file(MAKE_DIRECTORY "${CMAKE_PLUGINS_OUTPUT_DIRECTORY}")
 
 option(BUILD_TESTING "Build the testing tree" ON)
 add_feature_info(BUILD_TESTING BUILD_TESTING "Build the tsting tree.")
