cmake: provide info about enabled/supported plugins
Plugin has static and optional part. Static part is mandatory and have to link always into app resources.
It creates default/mock/fake components. Optional part will replace these mock components (if exists,
loaded and enabled by Qt's file selectors).

--- a/host/CMake/Templates/Version.cpp.in
+++ b/host/CMake/Templates/Version.cpp.in
@@ -14,3 +14,5 @@ const std::string_view AppInfo::versionPatch{"@VERSION_PATCH@"sv};
 const std::string_view AppInfo::buildId{"@BUILD_ID@"sv};
 const std::string_view AppInfo::gitRevision{"@GIT_REVISION@"sv};
 const std::string_view AppInfo::stageOfDevelopment{"@STAGE_OF_DEVELOPMENT@"sv};
+
+const std::string_view AppInfo::supportedPlugins_{"@SUPPORTED_PLUGINS@"sv};
