Add TokenManager, token sync gateway API

--- a/host/libs/Database/sample-app/CMakeLists.txt
+++ b/host/libs/Database/sample-app/CMakeLists.txt
@@ -1,7 +1,3 @@
-project(database-sampleapp
-    LANGUAGES CXX
-)
-
 add_executable(DatabaseManager-sampleapp
     DatabaseManager-sampleapp.cpp
 )
@@ -10,12 +6,21 @@ add_executable(Database-sampleapp
     couchbase-database-sampleapp.cpp
 )
 
+add_executable(TokenManager-sampleapp
+    TokenManager-sampleapp.cpp
+)
+
 target_link_libraries(DatabaseManager-sampleapp
     PUBLIC
     Database
 )
 
 target_link_libraries(Database-sampleapp
+    PUBLIC
+    Database
+)
+
+target_link_libraries(TokenManager-sampleapp
     PUBLIC
     Database
 )
