add Q_OBJECT macro to Identify in Device lib

--- a/host/libs/Board/CMakeLists.txt
+++ b/host/libs/Board/CMakeLists.txt
@@ -18,14 +18,14 @@ add_library(${DEVICE}
     Device/src/logging/LoggingQtCategories.cpp
     Device/Serial/src/SerialDevice.cpp
     Device/Mock/src/MockDevice.cpp
-	Device/Mock/src/MockDeviceControl.cpp
+    Device/Mock/src/MockDeviceControl.cpp
 
     #AUTOMOC wont find header if it is in different directory
     Device/Device.h
     Device/Serial/SerialDevice.h
     Device/Mock/MockDevice.h
-	Device/Mock/MockDeviceControl.h
-	Device/Mock/MockDeviceConstants.h
+    Device/Mock/MockDeviceControl.h
+    Device/Mock/MockDeviceConstants.h
 )
 add_library(strata::${DEVICE} ALIAS ${DEVICE})
 
@@ -39,7 +39,7 @@ target_include_directories(${DEVICE}
 target_link_libraries(${DEVICE}
     PUBLIC Qt5::Core
     PUBLIC Qt5::SerialPort
-	PUBLIC rapidjson::rapidjson
+    PUBLIC rapidjson::rapidjson
     PUBLIC strata::QtLogger
 )
 
@@ -69,7 +69,6 @@ add_library(${DEVICE_OPERATIONS}
     Device/Operations/Commands/src/CmdSetAssistedPlatformId.cpp
     Device/Operations/Commands/src/CmdWait.cpp
 
-    Device/Operations/BaseDeviceOperation.h
     Device/Operations/src/BaseDeviceOperation.cpp
     Device/Operations/src/Identify.cpp
     Device/Operations/src/StartBootloader.cpp
@@ -78,6 +77,10 @@ add_library(${DEVICE_OPERATIONS}
     Device/Operations/src/StartApplication.cpp
     Device/Operations/src/SetPlatformId.cpp
     Device/Operations/src/SetAssistedPlatformId.cpp
+
+    #AUTOMOC wont find header if it is in different directory
+    Device/Operations/BaseDeviceOperation.h
+    Device/Operations/Identify.h
 )
 add_library(strata::${DEVICE_OPERATIONS} ALIAS ${DEVICE_OPERATIONS})
 
