apply settings on target

--- a/host/research_spikes/networkConnectivity/strataServer/CMakeLists.txt
+++ b/host/research_spikes/networkConnectivity/strataServer/CMakeLists.txt
@@ -5,19 +5,21 @@ project(strataServer
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
-add_executable(strataServer
-      main.cpp
-      server.cpp
-      qml.qrc
+add_executable(${PROJECT_NAME}
+  main.cpp
+  server.cpp
+  qml.qrc
 )
 
-target_compile_definitions(strataServer
+target_compile_definitions(${PROJECT_NAME}
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(strataServer
+target_link_libraries(${PROJECT_NAME}
   PRIVATE Qt5::Core Qt5::Quick)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+  AUTOUIC ON
+  AUTOMOC ON
+  AUTORCC ON
+)
