--- a/host/research_spikes/networkConnectivity/strataClient/CMakeLists.txt
+++ b/host/research_spikes/networkConnectivity/strataClient/CMakeLists.txt
@@ -5,19 +5,21 @@ project(strataClient
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
-add_executable(strataClient
+add_executable(${PROJECT_NAME}
   main.cpp
   client.cpp
   qml.qrc
 )
 
-target_compile_definitions(strataClient
+target_compile_definitions(${PROJECT_NAME}
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(strataClient
+target_link_libraries(${PROJECT_NAME}
   PRIVATE Qt5::Core Qt5::Quick)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+  AUTOUIC ON
+  AUTOMOC ON
+  AUTORCC ON
+)
